Productize Utf8Parser and Utf8Formatter (dotnet/corefx#25078)
* Produce Utf8Parser and Utf8Formatter

Fixes https://github.com/dotnet/corefx/issues/24607

Remaining debt (cut for time):

Parsing Intgers with the "N" format

  https://github.com/dotnet/corefx/issues/24986

  Some questions to be resolved as to whether to be compatible
  (BCL doesn't care where you put the commas) or correct.

Format of floating point is still a wrapper hack

  https://github.com/dotnet/corefx/issues/25077

  The portable DoubleToNumber() code was never ported
  to C# (though the big block comment advertising it
  was).

* PR feedback.

- Move StandardFormat to System.Buffers

- Mark it readonly

- Fix spelling: "Seperator"

- Deduplicate namespace in ref .cs

* PR feedback.

- Assert that a culture-invariant ToString() on double produced ASCII characters only

- Add magic literal comments for the 4-byte compares in DateTimeOffset parsing.

- More "seperator" vs. "separator"

- Rename formatter benchmarks to be you know, "formatter"-like.

* PR feedback.

- Improve perf of long.MinValue path in TryFormat(long)

- Make TryParseDateTimeOffset compare exact casing for Rfx1123 formats ('R' and 'l')

* PR feedback.

- Lots of small items in the last round of feedback.

* PR feedback (ThrowHelper, AllocHelper, random easy stuff)

* PR feedback (StandardFormat.Parse/ToString())

Removed the extra allocations from this path
(though I still can't imagine anyone who cares
enough about perf to use this parser wanting
to use these apis) and addressed the outstanding
feedback surrounding these.

Removed the 1.2% false positive noise
from Utf8Parser code coverage. It's now at 100%.

* Replace 'buffer' text in XML docs


Commit migrated from https://github.com/dotnet/corefx/commit/d9924a578be5dab9237eaa2d324ecd66488eab96

--- a/src/libraries/System.Memory/tests/Performance/System.Memory.Performance.Tests.csproj
+++ b/src/libraries/System.Memory/tests/Performance/System.Memory.Performance.Tests.csproj
@@ -15,6 +15,8 @@
     <Compile Include="Perf.Span.IndexOf.cs" />
     <Compile Include="Perf.Span.StartsWith.cs" />
     <Compile Include="Perf.MemorySlice.cs" />
+    <Compile Include="Perf.Utf8Formatter.cs" />
+    <Compile Include="Perf.Utf8Parser.cs" />
     <Compile Include="..\Base64\Base64TestHelper.cs" />
     <Compile Include="..\TestHelpers.cs" />
     <Compile Include="$(CommonTestPath)\System\PerfUtils.cs">
