--- a/src/libraries/System.Memory/src/System.Memory.csproj
+++ b/src/libraries/System.Memory/src/System.Memory.csproj
@@ -36,6 +36,71 @@
     <Compile Include="System\Buffers\Text\Base64Decoder.cs" />
     <Compile Include="System\Buffers\Text\Base64Encoder.cs" />
   </ItemGroup>
+
+  <!-- Utf8 Formatter/Parser -->
+  <ItemGroup>
+    <Compile Include="System\Buffers\StandardFormat.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Constants.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\FormattingHelpers.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Boolean.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Date.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Date.G.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Date.O.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Date.R.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Date.L.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Decimal.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Decimal.E.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Decimal.F.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Decimal.G.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Float.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Guid.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Integer.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Integer.Signed.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Integer.Signed.D.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Integer.Signed.N.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Integer.Unsigned.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Integer.Unsigned.D.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Integer.Unsigned.N.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.Integer.Unsigned.X.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Formatter\Utf8Formatter.TimeSpan.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\ParserHelpers.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Boolean.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Date.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Date.Default.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Date.G.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Date.Helpers.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Date.O.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Date.R.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Decimal.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Float.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Guid.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Integer.Signed.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Integer.Signed.D.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Integer.Signed.N.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Integer.Unsigned.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Integer.Unsigned.D.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Integer.Unsigned.N.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Integer.Unsigned.X.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.Number.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.TimeSpan.BigG.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.TimeSpan.C.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.TimeSpan.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.TimeSpan.LittleG.cs" />
+    <Compile Include="System\Buffers\Text\Utf8Parser\Utf8Parser.TimeSpanSplitter.cs" />
+  </ItemGroup>
+
+  <!-- Double/Decimal format/parser logic copied (almost verbatim) over from CoreRT -->
+  <ItemGroup>
+    <Compile Include="System\Number\Decimal.DecCalc.cs" />
+    <Compile Include="System\Number\Number.cs" />
+    <Compile Include="System\Number\Number.FormatAndParse.cs" />
+    <Compile Include="System\Number\Number.NumberBuffer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Common\src\System\MutableDecimal.cs" />
+  </ItemGroup>
+
   <ItemGroup Condition="'$(IsPartialFacadeAssembly)' != 'true'">
     <Compile Include="System\ReadOnlySpan.cs" />
     <Compile Include="System\Span.cs" />
@@ -51,8 +116,15 @@
     <Compile Include="System\Buffers\MemoryHandle.cs" />
     <Compile Include="System\Buffers\OwnedMemory.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <!-- Common or Common-branched source files -->
+    <Compile Include="$(CommonPath)\System\NotImplemented.cs">
+      <Link>Common\System\NotImplemented.cs</Link>
+    </Compile>
+  </ItemGroup>
   <ItemGroup Condition="'$(IsPartialFacadeAssembly)' != 'true'">
     <Reference Include="System.Diagnostics.Debug" />
+    <Reference Include="System.Globalization" />
     <Reference Include="System.Reflection" />
     <Reference Include="System.Resources.ResourceManager" />
     <Reference Include="System.Runtime" />
