--- a/config.json
+++ b/config.json
@@ -36,6 +36,24 @@
       "values": [],
       "defaultValue": ""
     },
+    "CleanAllProjects": {
+      "description": "MsBuild target that deletes the binary output directory.",
+      "valueType": "target",
+      "values": [],
+      "defaultValue": ""
+    },
+    "CleanPackages": {
+      "description": "MsBuild target that deletes the repo-local nuget package directory.",
+      "valueType": "target",
+      "values": [],
+      "defaultValue": ""
+    },
+    "CleanPackagesCache": {
+      "description": "MsBuild target that deletes the user-local nuget package cache.",
+      "valueType": "target",
+      "values": [],
+      "defaultValue": ""
+    },    
     "ContainerName": {
       "description": "Container name for Azure upload.",
       "valueType": "property",
@@ -516,6 +534,34 @@
           "PortableBuild": "true",
           "UsePartialNGENOptimization": "false",
           "MSBuildNodeCount": "default"
+        }
+      }
+    },
+    "clean": {
+      "alias": {
+        "b": {
+          "description": "Deletes the binary output directory.",
+          "settings": {
+            "CleanAllProjects": "default"
+          }
+        },
+        "p": {
+          "description": "Deletes the repo-local nuget package directory.",
+          "settings": {
+            "CleanPackages": "default"
+            }
+        },
+        "c": {
+          "description": "Deletes the user-local nuget package cache.",
+          "settings": {
+            "CleanPackagesCache": "default"
+          }
+        }
+      },
+      "defaultValues": {
+        "toolName": "msbuild",
+        "settings": {
+          "MsBuildLog":"/flp:v=normal;LogFile=clean.log"
         }
       }
     },
