Add System.Runtime.Caching pkg and include it into the compat pack (dotnet/corefx#25109)
Commit migrated from https://github.com/dotnet/corefx/commit/1c1d5a6bf9c5d5af12ecc65a72e85a148be9beb9

--- a/src/libraries/System.Runtime.Caching/dir.props
+++ b/src/libraries/System.Runtime.Caching/dir.props
@@ -2,7 +2,10 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\dir.props" />
   <PropertyGroup>
+    <!-- this assembly is inbox in desktop, do not version it unless you
+         plan on shipping a new desktop version out of band. Instead add API
+         to a different assembly. -->
     <AssemblyVersion>4.0.0.0</AssemblyVersion>
-    <AssemblyKey>Open</AssemblyKey>
+    <AssemblyKey>MSFT</AssemblyKey>
   </PropertyGroup>
 </Project>
