--- a/src/installer/publish/dir.props
+++ b/src/installer/publish/dir.props
@@ -58,5 +58,6 @@
     <PublishRid Include="win-arm64" />
     <PublishRid Include="linux-arm" />
     <PublishRid Include="rhel.7-x64" />
+    <PublishRid Include="opensuse.42-x64" />
   </ItemGroup>
 </Project>
