Some tests for invoking delegates held in dynamic variables (dotnet/corefx#25218)
Contributes to dotnet/corefx#14345.

Confirms ERR_BadDelArgTypes as reachable, contributes to dotnet/corefx#22470.

Commit migrated from https://github.com/dotnet/corefx/commit/70a93f9b16065b627b8977d52bf03efee3e8f37e

--- a/src/libraries/Microsoft.CSharp/tests/Microsoft.CSharp.Tests.csproj
+++ b/src/libraries/Microsoft.CSharp/tests/Microsoft.CSharp.Tests.csproj
@@ -10,6 +10,7 @@
     <Compile Include="ArrayHandling.cs" />
     <Compile Include="BindingErrors.cs" />
     <Compile Include="CSharpArgumentInfoTests.cs" />
+    <Compile Include="DelegateInDynamicTests.cs" />
     <Compile Include="EnumArithmeticTests.cs" />
     <Compile Include="IndexingTests.cs" />
     <Compile Include="IntegerBinaryOperationTests.cs" />
