Improving System.Data.Odbc by making it adhere to interop conventions (dotnet/corefx#24621)
Improving System.Data.Odbc by making it adhere to interop conventions

Moving P/Invokes to src\Common\src\Interop\

Correcting configurations.props files to properly set TargetsWindows


Commit migrated from https://github.com/dotnet/corefx/commit/485a3e1cb074574c121836034415558fb7fe5661

--- a/src/libraries/System.Data.Odbc/src/Configurations.props
+++ b/src/libraries/System.Data.Odbc/src/Configurations.props
@@ -5,7 +5,7 @@
       netcoreapp2.0-Linux;
       netcoreapp2.0-OSX;
       netcoreapp2.0-Windows_NT;
-      netfx;
+      netfx-Windows_NT;
       netstandard;
     </BuildConfigurations>
   </PropertyGroup>
