Microsoft.CSharp: Replace IExprWithArgs interface with ExprWithArgs class in hierarchy (dotnet/corefx#25215)
* Remove always-null parameter to BindToProperty

Removal of paths for that parameter being null allows tightening return
type from Expr to ExprProperty.

* Replace IExprWithArgs interface with ExprWithArgs class in hierarchy

Makes OptionalArguments non-virtual

Allows implicit cast from ExprWithArgs to Expr for reduced casting.

* Rename IExprWithArgs.cs to ExprWithArgs.cs

To match new type name

* Change return types from Expr to ExprWithArgs where possible.

* Remove redundant cast from ReorderArgumentsForNamedAndOptional

Also make it void, since it always returns the same argument, to be
clearer it's mutating its argument.

* Remove redundant call to ExprMemberGroup.OptionalObject property.

Stored as part of extension-method handling, but dynamic doesn't
support extension methods.


Commit migrated from https://github.com/dotnet/corefx/commit/d00a342dd8f574a196b245eb315a9f0e31efae3b

--- a/src/libraries/Microsoft.CSharp/src/Microsoft.CSharp.csproj
+++ b/src/libraries/Microsoft.CSharp/src/Microsoft.CSharp.csproj
@@ -117,11 +117,11 @@
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\EXPR.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\ExpressionIterator.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\ExprOperator.cs" />
+    <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\ExprWithArgs.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\ExprWithType.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\Field.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\FieldInfo.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\HoistedLocal.cs" />
-    <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\IExprWithArgs.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\IExprWithObject.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\List.cs" />
     <Compile Include="Microsoft\CSharp\RuntimeBinder\Semantics\Tree\LocalVariable.cs" />
