Adding Memory CopyTo APIs and rename SpanExtensions to MemoryExtensions (dotnet/corefx#25192)
* Adding Memory CopyTo APIs and rename SpanExtensions to MemoryExtensions

* Addressing PR comments

* Renaming use of SpanExtensions to MemoryExtensions.


Commit migrated from https://github.com/dotnet/corefx/commit/038f3fafa47a28b5d701bdf23d75f60ae6c272ec

--- a/src/libraries/System.Memory/tests/System.Memory.Tests.csproj
+++ b/src/libraries/System.Memory/tests/System.Memory.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="ReadOnlySpan\ToArray.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Memory\CopyTo.cs" />
     <Compile Include="Memory\CtorArray.cs" />
     <Compile Include="Memory\CtorArrayIntInt.cs" />
     <Compile Include="Memory\CustomMemoryForTest.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="MemoryMarshal\AsMemory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ReadOnlyMemory\CopyTo.cs" />
     <Compile Include="ReadOnlyMemory\CtorArray.cs" />
     <Compile Include="ReadOnlyMemory\CtorArrayIntInt.cs" />
     <Compile Include="ReadOnlyMemory\DangerousTryGetArray.cs" />
