Start switching System.Native from C++ to C (dotnet/corefx#25032)
* Move System.Native/pal_maphardwaretype.cpp to C

* Switch C compiler from C11 to C99

* Move System.Native/pal_errno.cpp to C

* Move System.Native/pal_tcpstate.cpp to C

* Move System.Native/pal_networkstatistics.cpp to C

* Move System.Native/pal_memory.cpp to C

* Move System.Native/pal_io.cpp to C

* Move System.Native/pal_networking.cpp to C

* Define c_static_assert for compiler that don't support static_assert


Commit migrated from https://github.com/dotnet/corefx/commit/6a9f579209491ae9041f208bfe34b89085c0279e

--- a/src/libraries/Native/Unix/System.Native/CMakeLists.txt
+++ b/src/libraries/Native/Unix/System.Native/CMakeLists.txt
@@ -2,20 +2,20 @@ project(System.Native)
 
 set(NATIVE_SOURCES
     pal_console.cpp
-    pal_errno.cpp
+    pal_errno.c
     pal_interfaceaddresses.cpp
-    pal_io.cpp
-    pal_maphardwaretype.cpp
-    pal_memory.cpp
+    pal_io.c
+    pal_maphardwaretype.c
+    pal_memory.c
     pal_mount.cpp
-    pal_networking.cpp
-    pal_networkstatistics.cpp
+    pal_networking.c
+    pal_networkstatistics.c
     pal_process.cpp
     pal_random.cpp
     pal_runtimeinformation.cpp
     pal_runtimeextensions.cpp
     pal_string.cpp
-    pal_tcpstate.cpp
+    pal_tcpstate.c
     pal_time.cpp
     pal_uid.cpp
     pal_datetime.cpp
