Add null checks in Memory<T> APIs to support default (dotnet/corefx#25009)
* Add null checks in Memory<T> APIs to support default

* Applying Memory<T> to ReadOnlyMemory<T> cast optimization.

* Adding default IsEmpty tests and changing Empty to return default

* Fix the differences between corefx and coreclr impl.

* Changing Unsafe.AsPinnable<T> to Unsafe.AsPinnable<char>

* Adding case for Memory wrapping string + tests.


Commit migrated from https://github.com/dotnet/corefx/commit/98127b886479216e1bb687379f61d01001b49e81

--- a/src/libraries/System.Memory/tests/System.Memory.Tests.csproj
+++ b/src/libraries/System.Memory/tests/System.Memory.Tests.csproj
@@ -72,7 +72,6 @@
     <Compile Include="ReadOnlySpan\Slice.cs" />
     <Compile Include="ReadOnlySpan\StartsWith.T.cs" />
     <Compile Include="ReadOnlySpan\StartsWith.byte.cs" />
-    <Compile Include="ReadOnlyMemory\Strings.cs" />
     <Compile Include="ReadOnlySpan\ToArray.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +87,7 @@
     <Compile Include="Memory\Retain.cs" />
     <Compile Include="Memory\Slice.cs" />
     <Compile Include="Memory\Span.cs" />
+    <Compile Include="Memory\Strings.cs" />
     <Compile Include="Memory\ToArray.cs" />
     <Compile Include="Memory\TryGetArray.cs" />
   </ItemGroup>
@@ -106,6 +106,7 @@
     <Compile Include="ReadOnlyMemory\Retain.cs" />
     <Compile Include="ReadOnlyMemory\Slice.cs" />
     <Compile Include="ReadOnlyMemory\Span.cs" />
+    <Compile Include="ReadOnlyMemory\Strings.cs" />
     <Compile Include="ReadOnlyMemory\ToArray.cs" />
   </ItemGroup>
   <ItemGroup>
