Add failure feeds file and test case for negative feed test (dotnet/corefx#25237)
* Add failure feeds and test case for feed test

* Update


Commit migrated from https://github.com/dotnet/corefx/commit/9b8e1d94e484343a179a29472710e291b2305d17

--- a/src/libraries/System.ServiceModel.Syndication/tests/System.ServiceModel.Syndication.Tests.csproj
+++ b/src/libraries/System.ServiceModel.Syndication/tests/System.ServiceModel.Syndication.Tests.csproj
@@ -16,7 +16,10 @@
     <Content Include="$(MsBuildThisFileDirectory)\TestFeeds\AtomFeeds\*.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-	<Content Include="$(MsBuildThisFileDirectory)\TestFeeds\RssFeeds\*.xml">
+    <Content Include="$(MsBuildThisFileDirectory)\TestFeeds\RssFeeds\*.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="$(MsBuildThisFileDirectory)\TestFeeds\FailureFeeds\*.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -24,7 +27,7 @@
     <None Include="$(MsBuildThisFileDirectory)\TestFeeds\atom_feeds.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-	<None Include="$(MsBuildThisFileDirectory)\TestFeeds\rss_feeds.dat">
+    <None Include="$(MsBuildThisFileDirectory)\TestFeeds\rss_feeds.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
