Add support for Unix Domain Sockets (dotnet/corefx#25246)
* Move UnixDomainSocketEndPoint to System.Net.Sockets.

* Expose UnixDomainSocketEndPoint publicly in System.Net.Sockets.

Fix dotnet/corefx#10981

* Split UnixDomainSocketTest netcoreapp specific pieces to only be compiled for netcoreapp.

Also - fix the new test names to follow the existing format in the file.


Commit migrated from https://github.com/dotnet/corefx/commit/db1793c43b1c681442ec8035eefa7a41e50abffb

--- a/src/libraries/System.Net.Sockets/tests/FunctionalTests/System.Net.Sockets.Tests.csproj
+++ b/src/libraries/System.Net.Sockets/tests/FunctionalTests/System.Net.Sockets.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MulticastOptionTest.cs" />
     <Compile Include="UdpClientTest.cs" />
     <Compile Include="UnixDomainSocketTest.cs" />
+    <Compile Include="UnixDomainSocketTest.netcoreapp.cs" Condition="'$(TargetGroup)' != 'netstandard'" />
     <!-- Common Sockets files -->
     <Compile Include="$(CommonTestPath)\System\Net\Configuration.cs">
       <Link>SocketCommon\Configuration.cs</Link>
